# nand2tetris

projects/01/: Mux.hdl  Or8Way.hdl
projects/02/: ALU.hdl
projects/03/a/: PC.hdl
projects/04/fill/: Fill.asm  Fill.hack
projects/04/mult/: mult.asm
projects/05/: CPU.hdl  Computer.hdl  Memory.hdl
projects/06/: Cargo.toml
projects/06/src/: code.rs  main.rs  parser.rs  symbol_table.rs
projects/07/: Cargo.toml  test.asm
projects/07/src/: lib.rs  main.rs  parser.rs  vm.pest  writer.rs
projects/07/tests/MemoryAccess/BasicTest/: BasicTest.asm
projects/07/tests/MemoryAccess/PointerTest/: PointerTest.asm
projects/07/tests/StackArithmetic/StackTest/: StackTest.asm
projects/08/FunctionCalls/FibonacciElement/: FibonacciElement.asm
projects/08/FunctionCalls/NestedCall/: NestedCall.asm
projects/08/FunctionCalls/SimpleFunction/: SimpleFunction.asm
projects/08/FunctionCalls/StaticsTest/: StaticsTest.asm
projects/08/ProgramFlow/BasicLoop/: BasicLoop.asm
projects/08/ProgramFlow/FibonacciSeries/: FibonacciSeries.asm
projects/08/src/: main.rs  parser.rs  vm.pest  writer.rs
