[package]
name = "vmtranslator"
version = "0.1.0"
authors = ["Jason Killian <jason.killian@trialspark.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pest = "2.1.3"
pest_derive = "2.1.0"
strum = "0.20"
strum_macros = "0.20"
